--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.9.1
   google_fonts: ^5.1.0
   flutter_dotenv: ^5.1.0
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
