--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^5.1.0
   flutter_dotenv: ^5.1.0
   share: ^2.0.4
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
