--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_dotenv: ^5.1.0
   share: ^2.0.4
   scrollable_positioned_list: ^0.3.8
+  chewie: ^1.7.1
+  video_player: ^2.7.1
 
 dev_dependencies:
   flutter_test:
